Item840:    * fixed mod_perl issue in RECENTCOMMENTS    * removed ExtendedSelectPlugin patch; tightened DEPENDENCIES instead    * fixed blogEntryCount, blogCommentCount: FF and IE can't align      floats into the same line as a list item; FF cascades them in some      funny way, IE "hides" them partially    * added SearchView for blog entries    * more noautolink fixes in BlogComments and elsewhere    * better toggle img for threaded comments    * minor docu fixes
git-svn-id: http://develop.twiki.org/svn/twiki/branches/DEVELOP/twikiplugins@8192 a00a5322-12db-0310-a70b-8735589c885e

--- a/BlogPlugin/pub/TWiki/BlogPlugin/style.css
+++ b/BlogPlugin/pub/TWiki/BlogPlugin/style.css
@@ -22,7 +22,8 @@
   padding-bottom:20px;
 }
 
-.blogHeadline {
+.blogHeadline h1,
+.blogHeadline h2 {
   margin:0px;
   padding:0px;
   margin-bottom:0px;
@@ -34,6 +35,7 @@
 
 .blogText {
   text-align:justify;
+  width:100%;
 }
 .blogTeaser {
   margin-bottom:1em;
@@ -74,7 +76,10 @@
   margin-top:20px;
 }
 .blogCommentCount {
-  margin-left:5px;
+  margin-left:10px;
+}
+.blogEntryCount {
+  text-align:right;
 }
 .blogComment {
   padding:5px;
